架构调整，用户接口

--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <button onclick="onClick">添加</button>
 </body>
+<script>
+    const axios = require('axios')
+    function onClick () {
+        console.log(axios)
+    }
+ </script>
 </html>
